--- a/components/Releases/ReleaseCard.module.css
+++ b/components/Releases/ReleaseCard.module.css
@@ -20,14 +20,9 @@
 }
 
 .title {
-  display: inline;
   font-size: var(--step-2);
   font-weight: var(--font-weight-6);
   font-family: var(--font-main);
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .title a {
@@ -62,21 +57,26 @@
   flex: 1 1 100%;
   display: grid;
   grid-template-columns: 1fr auto;
+  line-height: 1.2;
 }
 
 .details > * {
   grid-column: 1;
 }
 
-.title {
-  line-height: 1.2;
+.label {
+  margin-top: 0.2em;
+}
+
+.label,
+.type {
+  font-size: var(--font-size--1);
 }
 
 .type {
   display: flex;
   align-items: baseline;
   gap: 0.2em;
-  font-size: var(--font-size--1);
 }
 
 .type svg {
