--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -10,3 +10,16 @@
 .visually-hidden {
   display: none;
 }
+
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.line-clamp {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: var(--line-clamp, 2);
+}
